@@ -11,4 +11,8 @@ curses.o curses..o: curses_keys.h
 
 curses_keys.h: curses_keys.awk @CURSES_KEYS_H@
 	$(AWK) -f $(sdir)/curses_keys.awk @CURSES_KEYS_H@ /dev/null >curses_keys.h
+
+clean-here: clean.curses
+clean.curses:
+	rm -f curses_keys.h
 Make
